# jamma

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: build-wheels.yml  ci.yml  publish.yml  rust.yml
.planning/: ROADMAP.md  STATE.md
.planning/phases/18-correctness-performance/: 18-01-PLAN.md  18-02-PLAN.md  18-RESEARCH.md
.planning/phases/24-quality-cleanup/: 24-01-PLAN.md  24-02-PLAN.md  24-02-SUMMARY.md
.planning/phases/25-loco-kinship/: 25-01-SUMMARY.md  25-02-SUMMARY.md  25-03-SUMMARY.md
.planning/phases/26-eigendecomposition-reuse/: 26-02-SUMMARY.md
.planning/phases/28-filtering-and-input-validation/: 28-01-PLAN.md  28-01-SUMMARY.md  28-02-PLAN.md  28-02-SUMMARY.md
.planning/phases/29-loco-integration-wiring/: 29-01-SUMMARY.md
.planning/quick/1-vectorize-per-snp-imputation-loop-in-str/: 1-SUMMARY.md
.planning/quick/2-add-top-level-jamma-gwas-api-function/: 2-SUMMARY.md
bioconda/: meta.yaml
docs/: BACKENDS.md  CODEMAP.md  EQUIVALENCE.md  FORMAL_PROOF.md  GEMMA_DIVERGENCES.md  MATHEMATICAL_EQUIVALENCE.md  NUMERICAL_EQUIVALENCE_BOUND.md  PERFORMANCE.md  RUST_BACKEND.md  USER_GUIDE.md  WHY_JAMMA.md
notebooks/: databricks_benchmark.py  databricks_diagnostic.py  databricks_jamma_vs_gemma.py  databricks_thread_sweep.py  eigendecomp_stress_test.py  rust_build_benchmark.py
output/: e2e_test.log.txt  test.log.txt  test_lmm.assoc.txt  test_lmm.log.txt  test_task2.log.txt
rust/jamma-core/: .gitignore  Cargo.toml  pyproject.toml
rust/jamma-core/.cargo/: config.toml
rust/jamma-core/src/: lib.rs
rust/jamma-core/tests/: test_eigendecomp.py
scripts/: demonstrate_equivalence.py  generate_all_gemma_fixtures.sh  generate_all_tests_reference.sh  generate_covariate_reference.sh  generate_lmm_reference.sh  generate_score_reference.sh
src/gemma_next/: __init__.py  cli.py
src/gemma_next/core/: __init__.py  config.py  jax_config.py
src/gemma_next/io/: __init__.py
src/gemma_next/utils/: __init__.py  logging.py
src/gemma_next/validation/: __init__.py  compare.py
src/jamma/: __init__.py  cli.py  gwas.py  pipeline.py
src/jamma/core/: __init__.py  backend.py  config.py  jax_config.py  memory.py  progress.py  snp_filter.py  threading.py
src/jamma/io/: __init__.py  covariate.py  plink.py  snp_list.py
src/jamma/kinship/: __init__.py  compute.py  io.py  missing.py
src/jamma/lmm/: __init__.py  chunk.py  eigen.py  eigen_io.py  io.py  likelihood.py  likelihood_jax.py  loco.py  optimize.py  prepare.py  results.py  runner_jax.py  runner_streaming.py  stats.py
src/jamma/utils/: __init__.py  logging.py
src/jamma/validation/: __init__.py  compare.py  tolerances.py
tests/: __init__.py  benchmark_rust_memory.py  conftest.py  test_auto_tune_chunk.py  test_backend_detection.py  test_cli.py  test_cli_memory.py  test_eigen_io.py  test_eigendecomp_memory.py  test_gemma_integration.py  test_gwas_api.py  test_hypothesis.py  test_incremental_writer.py  test_integration.py  test_io.py  test_jax.py  test_kinship_benchmark.py  test_kinship_compute.py  test_kinship_io.py  test_kinship_validation.py  test_lmm_lrt.py  test_lmm_memory.py  test_lmm_null_model.py  test_lmm_numpy_memory.py  test_lmm_score.py  test_lmm_unit.py  test_lmm_validation.py  test_loco.py  test_memory.py  test_memory_chunk_coupling.py  test_missingness.py  test_pipeline.py  test_plink_validation.py  test_progress.py  test_rss_logging.py  test_runner_jax.py  test_rust_parity.py  test_scale.py  test_snp_filter.py  test_snp_filter_perf.py  (+4 more)
tests/fixtures/gemma_all_tests/: gemma_all.assoc.txt  gemma_all.log.txt  gemma_all_covar.assoc.txt  gemma_all_covar.log.txt
tests/fixtures/gemma_covariate/: covariates.txt  gemma_covariate.assoc.txt  gemma_covariate.log.txt  gemma_covariate_lrt.assoc.txt  gemma_covariate_lrt.log.txt  gemma_covariate_score.assoc.txt  gemma_covariate_score.log.txt
tests/fixtures/gemma_score/: gemma_score.assoc.txt  gemma_score.log.txt
tests/fixtures/gemma_synthetic/: gemma_assoc.assoc.txt  gemma_kinship.cXX.txt  gemma_lrt.assoc.txt  gemma_lrt.log.txt  test.bed  test.bim  test.fam
tests/fixtures/kinship/: README.md  gemma_ref.log.txt  mouse_hs1940.log.txt
tests/fixtures/lmm/: mouse_hs1940.assoc.txt  mouse_hs1940.log.txt
tests/fixtures/mouse_hs1940/: covariates.txt  mouse_hs1940_all.assoc.txt  mouse_hs1940_all.log.txt  mouse_hs1940_covar_all.assoc.txt  mouse_hs1940_covar_all.log.txt  mouse_hs1940_covar_lrt.assoc.txt  mouse_hs1940_covar_lrt.log.txt  mouse_hs1940_covar_score.assoc.txt  mouse_hs1940_covar_score.log.txt  mouse_hs1940_covar_wald.assoc.txt  mouse_hs1940_covar_wald.log.txt  mouse_hs1940_kinship.log.txt  mouse_hs1940_lrt.assoc.txt  mouse_hs1940_lrt.log.txt  mouse_hs1940_score.assoc.txt  mouse_hs1940_score.log.txt
