[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jamma"
version = "0.1.0"
description = "JAMMA: JAX-Accelerated Mixed Model Association"
readme = "legacy/README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "JAMMA Contributors" }]
dependencies = [
    "bed-reader>=1.0.0",
    "jax>=0.8.0",
    "jaxlib>=0.8.0",
    "numpy>=1.26.0",
    "typer>=0.12.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=5.0.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
jamma = "jamma.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --randomly-seed=last"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
]
