[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jamma"
version = "1.5.1"
description = "JAMMA: JAX-Accelerated Mixed Model Association"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "JAMMA Contributors" }]
dependencies = [
    "bed-reader>=1.0.0",
    "jax>=0.8.0",
    "jaxlib>=0.8.0",
    "jaxtyping>=0.2.28",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "threadpoolctl>=3.0.0",
    "typer>=0.12.0",
    "loguru>=0.7.0",
    "progressbar2>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=5.0.0",
    "hypothesis>=6.100.0",
    "hypothesis[numpy]>=6.100.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
jamma = "jamma.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --randomly-seed=last --benchmark-skip"
filterwarnings = [
    "ignore:Some donated buffers were not usable:UserWarning",
]
markers = [
    "tier0: fast unit tests (<5s), no external dependencies, no GEMMA reference",
    "tier1: parity tests (<60s), validates against GEMMA reference data",
    "tier2: scale tests (memory/time intensive), requires large memory or long runtime",
    "slow: alias for tier2, marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests that require pytest-benchmark (run with '--benchmark-only')",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["F722"]  # jaxtyping uses non-standard annotation syntax

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = ["E402", "E501"]  # Databricks: cell separators, long MAGIC lines

[dependency-groups]
dev = [
    "hypothesis[numpy]>=6.100.0",
    "pyyaml>=6.0.3",
    "ruff>=0.14.14",
]
