[package]
name = "jamma-core"
version = "0.1.0"
edition = "2021"
description = "JAMMA native extensions for high-performance linear algebra"
license = "GPL-3.0-or-later"

[lib]
name = "jamma_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
ndarray = "0.16"
faer = { version = "0.24", features = ["rayon"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
