[package]
name = "jamma-core"
version = "0.2.0"
edition = "2021"
description = "JAMMA native extensions for high-performance linear algebra"
license = "GPL-3.0-or-later"

[lib]
name = "jamma_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
ndarray = "0.17"
faer = { version = "0.22", features = ["rayon"] }

# Pure-Rust BLAS/LAPACK stack
# Pin scirs2-linalg; oxiblas is pulled transitively
scirs2-linalg = { version = "0.1", features = ["linalg", "simd"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
