[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jamma-core"
dynamic = ["version"]
requires-python = ">=3.10"
description = "JAMMA native extensions for high-performance linear algebra"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "jamma_core"
